--- a/website/newsletter/262/index.mdx
+++ b/website/newsletter/262/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /262
-title: "This Week In React #262: React2Shell, Fate, TanStack AI, React Grab, Formisch | React Native 0.83, Reanimated 4.2, State of RN, Refined, Crypto, Worklets, Sheet Navigator | CSS, Temporal, Supply Chain, Firefox"
+title: "This Week In React #262: React2Shell, Fate, TanStack AI, React Grab, Formisch, Base UI | React Native 0.83, Reanimated 4.2, State of RN, Refined, Crypto, Worklets, Sheet Navigator | CSS, Temporal, Supply Chain, Firefox"
 authors: [slorber]
 date: 12-10-2025
 ---
